20200205 python class wrapup etc.

--- a/python/algorithm/3-1. 2차원 List (1).md
+++ b/python/algorithm/3-1. 2차원 List (1).md
@@ -9,6 +9,8 @@
    - 행을 차례대로 탐색해 나가는 방법이다.
 
 ```python
+# python 예시 - 행 우선 탐색
+
 A = [['{0:2d}'.format(i) for i in range(j, j+5)] for j in range(1, 26, 5)]
 
 for i in range(5):
@@ -35,6 +37,8 @@ print()
    - 열을 차례대로 탐색해 나가는 방법이다.
 
 ```python
+# python 예시 - 열 우선 탐색
+
 A = [['{0:2d}'.format(i) for i in range(j, j+5)] for j in range(1, 26, 5)]
 
 for i in range(5):
@@ -64,6 +68,8 @@ print()
    a. 행 우선 지그재그 탐색
 
    ```python
+   # python 예시 - 행 우선 지그재그 탐색
+   
    A = [['{0:2d}'.format(i) for i in range(j, j+5)] for j in range(1, 26, 5)]
    
    for i in range(5):
@@ -90,6 +96,8 @@ print()
    b. 열 우선 지그재그 탐색
 
    ```python
+   # python 예시 - 열 우선 지그재그 탐색
+   
    A = [['{0:2d}'.format(i) for i in range(j, j+5)] for j in range(1, 26, 5)]
    
    for i in range(5):
@@ -117,7 +125,8 @@ print()
    - 이 코드에서 +x, +y의 방향은 직교좌표계에서 +x, -y 방향이다.
 
 ```python
-# 델타를 이용한 탐색 - 달팽이 모양으로 출력
+# python 예시 - 델타를 이용한 탐색: 달팽이 모양으로 출력
+
 def Inbox(lst, y, x, xmax, ymax): 
     # 0 <= x < xmax, 0 <= y < ymax 일때 True 반환. IndexError를 방지할 수 있다.
     if x >= 0 and x < xmax and y >= 0 and y < ymax:
