--- a/python/algorithm/2-1. 정렬 (1).md
+++ b/python/algorithm/2-1. 정렬 (1).md
@@ -19,11 +19,11 @@
 
 
 * <strong>버블 정렬</strong>
-- 인접한 두 개의 원소를 비교하며 자리를 계속 교환하는 방식.
-- 시간복잡도 - O(n<sup>2</sup>)
+  * 인접한 두 개의 원소를 비교하며 자리를 계속 교환하는 방식.
+  * 시간복잡도 - O(n<sup>2</sup>)
 
 ```python
-# python 예시
+# python 예시 - 버블 정렬
 
 def Bubblesort(a):
     for i in range(len(a)-1, 0, -1):
@@ -55,7 +55,7 @@ print(a)
   - 시간복잡도 - O(n+k) : n은 리스트의 개수, k는 정수의 최대값
 
 ```python
-# python 예시
+# python 예시 - 카운팅 정렬
 
 def CountingSort(lst, maxn): # lst라는 리스트 내에서 maxn까지의 값을 정렬
     temp = [] # 정렬 가능한 리스트
