--- a/python/실수-오답노트.md
+++ b/python/실수-오답노트.md
@@ -1,7 +1,9 @@
 * 시작 인덱스와 끝 인덱스가 어떤 동작이냐에 따라서도 달라진다. (clock, cntclock)
 * 리스트 내에서 for 문을 돌릴 때, 요소의 개수가 변하면 원하는 대로 실행되지 않을 수 있다.
-* while은 조건문을 빠져나갈 경우를 반드시 만들어야 한다. 함수에서든 어디서든.
+* <strong>while은 조건문을 빠져나갈 경우를 반드시 만들어야 한다. 함수에서든 어디서든.</strong>
 * 런타임 에러 - 메모리를 많이 잡아먹어서 그런 경우가 있다.
   --> 리스트 슬라이싱이 메모리를 많이 잡아먹는다. 이것을 줄이는 것으로도 효과를 볼 수 있다.
 * 리스트 인덱싱 할 때
   --> 직접 손으로 인덱싱 시뮬레이션 해보면 덜 헷갈릴 수 있다.
+* 조건들에 맞는 예외 케이스들 모두 점검해보자.
+  --> ex. 스위치 한 줄 20개, 참외밭 반시계 입력 등
