--- a/python/algorithm/5. 검색.md
+++ b/python/algorithm/5. 검색.md
@@ -11,7 +11,7 @@
   1. 정렬되지 않은 자료의 검색
   
   ```python
-  # python 예시 - 정렬되지 않은 자료의 검색
+  # python 예시 - 순차 검색(1): 정렬되지 않은 자료의 검색
   
   def seq(lst, key):
       for i in range(len(lst)):
@@ -33,7 +33,7 @@
   2. 정렬된 자료의 검색
   
   ```python
-  # python 예시 - 정렬된 자료의 검색
+  # python 예시 - 순차 검색(2): 정렬된 자료의 검색
   
   def seq2(lst, key):
       for i in range(len(lst)):
@@ -56,7 +56,43 @@
   >>> 검색 실패
   ```
   
+
+
+
+- <strong>이진 검색</strong>
+
+  - 정렬된 자료를 검색
+  - 자료의 가운데 값과 찾고자 하는 값을 비교하여 다음 검색의 위치를 정하는 방식
+  - 시간복잡도 - O(logn)
+
+  ```python
+  # python 예시 - 이진 검색
   
+  def binarysearch(lst, key):
+      s = 0
+      e = len(lst) - 1
+  
+      while s <= e:
+          m = (s + e) // 2
+          if lst[m] == key:
+              return '{0}번째'.format(m+1)
+          elif lst[m] < key:
+              s = m+1
+          else:
+              e = m-1
+  
+      return '없습니다'
+  
+  lst = [2, 4, 7, 9, 11, 19, 23]
+  print(binarysearch(lst, 2))
+  print(binarysearch(lst, 10))
+  
+  # 출력
+  >>> 1번째
+  >>> 없습니다
+  ```
+
+
 
 
 
