20200207 python boj etc.

--- a/python/algorithm/2-2. 정렬 (2).md
+++ b/python/algorithm/2-2. 정렬 (2).md
@@ -72,29 +72,58 @@
   * 셀렉션 알고리즘을 전체 자료에 적용함
     * 자료 내의 최소값을 찾은 후 그 값을 리스트의 맨 앞의 값과 바꿔준다. 이후 남은 리스트에 대해서 같은 작업을 반복한다.
   * 시간복잡도 - O(n<sup>2</sup>)
-
-```python
-# python 예시 - 선택 정렬
-
-def SelectionSort(lst):
-    result = lst
-    idx = 0
-    for i in range(len(lst) - 1):
-        for j in range(i, len(lst)):
-            if result[idx] > result[j]:
-                idx = j
-        result[i], result[idx] = result[idx], result[i]
-
-    return result
-
-lst = [4, 9, 11, 23, 2, 19, 7]
-print(SelectionSort(lst))
-
-# 출력
->>> [2, 4, 7, 9, 11, 19, 23]
-```
-
-
+  
+  
+  
+  1. 반복문을 이용한 선택 정렬
+  
+  ```python
+  # python 예시 - 선택 정렬(1): 반복문
+  
+  def SelectionSort(lst):
+      result = lst
+      idx = 0
+      for i in range(len(lst) - 1):
+          for j in range(i, len(lst)):
+              if result[idx] > result[j]:
+                  idx = j
+          result[i], result[idx] = result[idx], result[i]
+  
+      return result
+  
+  lst = [4, 9, 11, 23, 2, 19, 7]
+  print(SelectionSort(lst))
+  
+  # 출력
+  >>> [2, 4, 7, 9, 11, 19, 23]
+  ```
+  
+  
+  
+  2. 재귀를 이용한 선택 정렬
+  
+  ```python
+  # python 예시 - 선택 정렬(2): 재귀
+  
+  def SelectionSort(lst, k): # 위치 k부터 정렬
+      if k == len(lst) :
+          return
+      idx = k
+      for i in range(k+1, len(lst)):
+          if lst[k] > lst[i]:
+              idx = i
+      lst[idx], lst[k] = lst[k], lst[idx]
+      return SelectionSort(lst, k+1)
+  
+  a = [4, 9, 11, 23, 2, 19, 7]
+  SelectionSort(a, 0)
+  print(a)
+  
+  # 출력
+  >>> [2, 7, 9, 11, 4, 19, 23]
+  ```
+  
+  
 
 
 
