--- a/python/실수-오답노트.md
+++ b/python/실수-오답노트.md
@@ -7,3 +7,7 @@
   --> 직접 손으로 인덱싱 시뮬레이션 해보면 덜 헷갈릴 수 있다.
 * 조건들에 맞는 예외 케이스들 모두 점검해보자.
   --> ex. 스위치 한 줄 20개, 참외밭 반시계 입력 등
+
+- 동시에 여러 요소를 체크해야 하는 경우 elif, else문 등으로 만들지 않고 <strong>모두 if</strong>를 사용해야 한다.
+
+  --> 체크해야 하는 요소 하나 당 <strong>if, elif, else 묶음</strong>으로 하나씩 필요하다.
