--- a/python/algorithm/8-1. DFS (1) (깊이 우선 탐색, Depth-First Search).md
+++ b/python/algorithm/8-1. DFS (1) (깊이 우선 탐색, Depth-First Search).md
@@ -1,4 +1,4 @@
-## DFS (깊이 우선 탐색, Depth-First Search)
+## DFS (1) (깊이 우선 탐색, Depth-First Search)
 
 - <strong>DFS (깊이 우선 탐색)</strong>
 
@@ -8,9 +8,9 @@
   
   
 
-- <strong>DFS 구현</strong>
+- <strong>DFS 구현 (1)</strong>
 
-  ![DFS(깊이 우선 탐색) 알고리즘](C:\Users\multicampus\Desktop\TIL\What_I_Studied\python\algorithm\DFS 도식.JPG)
+  ![DFS 알고리즘](C:\Users\multicampus\Desktop\바탕화면\TIL\What_I_Studied\python\algorithm\DFS 도식.JPG)
 
   - 경로를 역추적할 때 필요한 자료구조 <strong><span style='color:red'>스택</span></strong>과 정점에 방문했는지에 대한 상태 정보를 저장하는 <strong>visited 리스트</strong>가 필요하다.
 
