--- a/python/실수-오답노트.md
+++ b/python/실수-오답노트.md
@@ -11,3 +11,8 @@
 - 동시에 여러 요소를 체크해야 하는 경우 elif, else문 등으로 만들지 않고 <strong>모두 if</strong>를 사용해야 한다.
 
   --> 체크해야 하는 요소 하나 당 <strong>if, elif, else 묶음</strong>으로 하나씩 필요하다.
+  
+- 리스트 슬라이싱 할 때
+  --> [i - x] 이런 식으로 할 때 i == 0인 경우 내가 원하지 않은 대로 실행될 수 있다.
+  --> 슬라이싱 거꾸로 할 때 조심하기.
+  ex. [i : i + M] --> (거꾸로 세어준다면) [- (N - (i + M)) <strong>- 1</strong> : - (N - i) <strong>- 1</strong>: -1]
