20200217 python swea course inter

--- a/python/algorithm/2-1. 정렬 (1).md
+++ b/python/algorithm/2-1. 정렬 (1).md
@@ -14,7 +14,7 @@
 
   n! > 2<sup>n</sup> > n<sup>2</sup> > nlogn > n > logn > 1
 
-  ![big O 시간 복잡도](C:\Users\multicampus\Desktop\TIL\What_I_Studied\python\algorithm\bigO 시간복잡도.png)
+  ![big O 시간 복잡도](https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Comparison_computational_complexity.svg/768px-Comparison_computational_complexity.svg.png)
 
 
 
