--- a/python/algorithm/10. 백트래킹 (Backtracking).md
+++ b/python/algorithm/10. 백트래킹 (Backtracking).md
@@ -2,7 +2,7 @@
 
 - <strong>백트래킹(Backtracking)</strong>
   - 정답을 찾는 도중에 막히면 되돌아가서 다시 정답을 찾아가는 방법.
-  - 일반적으로 DFS 순회를 하다 답을 찾을 수 없게 되는 조건을 만나면 가지치기를 한다.
+  - 일반적으로 DFS 순회를 하다 답을 찾을 수 없게 되는 조건을 만나면 가지치기를 하는 방법을 백트래킹이라고 한다.
 
 
 
@@ -51,7 +51,7 @@
 
   # 출력
   >>> 92
-```
+  ```
   
 
 
@@ -95,57 +95,58 @@
 
 
 
+
 - 순열 (Permutation)
 
-
-  - 순열: 서로 다른 n개에서 r개를 뽑아 순서를 고려하여 늘어놓는 경우의 수.
-  - 원하는 리스트(target)의 n개 원소 중 r 개를 뽑아 나열하는 모든 경우의 수를 출력한다.
-  - target에서 어떤 원소 a를 뽑았다면 그 원소를 다시 뽑는 경우는 가지치기를 해준다.
-
-  ```python
-  # python 예시 - 순열 (Permutation)
-  
-  def BT_permutation(t, inp):
-      times = inp - t
-  
-      if t == 0:
-          result.append(stack.copy())
-          return 
-      
-      for i in range(inp):
-          if target[i] not in stack:
-              stack.append(target[i])
-              BT_permutation(t - 1, inp)
-              stack.remove(target[i])
-  
-  
-  target = [1, 2, 3, 4]
-  n = len(target)
-  stack = []
-  
-  result = []
-  BT_permutation(2, n) 
-  # nPr, n개(4개) 중에서 r개(2개)를 뽑아 순서를 고려하여 늘어놓는 경우의 수
-  print(result)
-  
-  result = []
-  BT_permutation(4, n) 
-  # n!, n개(4개)를 순서를 고려하여 늘어놓는 경우의 수
-  print(result)
-  
-  # 출력
-  [[1, 2], [1, 3], [1, 4], [2, 1], [2, 3], [2, 4], [3, 1], [3, 2], [3, 4], [4, 1], [4, 2], [4, 3]] # BT_permutation(2, n) 결과
-  [[1, 2, 3, 4], [1, 2, 4, 3], [1, 3, 2, 4], [1, 3, 4, 2], [1, 4, 2, 3], [1, 4, 3, 2], [2, 1, 3, 4], [2, 1, 4, 3], 
-  [2, 3, 1, 4], [2, 3, 4, 1], [2, 4, 1, 3], [2, 4, 3, 1], [3, 1, 2, 4], [3, 1, 4, 2], [3, 2, 1, 4], [3, 2, 4, 1], [3, 4, 1, 2], [3, 4, 2, 1], [4, 1, 2, 3], [4, 1, 3, 2], [4, 2, 1, 3], [4, 2, 3, 1], [4, 3, 1, 2], [4, 3, 2, 1]] # BT_permutation(4, n) 결과
-  ```
-
-  
-
-  
+    - 순열: 서로 다른 n개에서 r개를 뽑아 순서를 고려하여 늘어놓는 경우의 수.
+    - 원하는 리스트(target)의 n개 원소 중 r 개를 뽑아 나열하는 모든 경우의 수를 출력한다.
+    - target에서 어떤 원소 a를 뽑았다면 그 원소를 다시 뽑는 경우는 가지치기를 해준다.  
+    
+    ```python
+    # python 예시 - 순열 (Permutation)
+    
+    def BT_permutation(t, inp):
+        times = inp - t
+    
+        if t == 0:
+            result.append(stack.copy())
+            return 
+        
+        for i in range(inp):
+            if target[i] not in stack:
+                stack.append(target[i])
+                BT_permutation(t - 1, inp)
+                stack.remove(target[i])
+    
+    
+    target = [1, 2, 3, 4]
+    n = len(target)
+    stack = []
+    
+    result = []
+    BT_permutation(2, n) 
+    # nPr, n개(4개) 중에서 r개(2개)를 뽑아 순서를 고려하여 늘어놓는 경우의 수
+    print(result)
+    
+    result = []
+    BT_permutation(4, n) 
+    # n!, n개(4개)를 순서를 고려하여 늘어놓는 경우의 수
+    print(result)
+    
+    # 출력
+    [[1, 2], [1, 3], [1, 4], [2, 1], [2, 3], [2, 4], [3, 1], [3, 2], [3, 4], [4, 1], [4, 2],[4, 3]]
+    # BT_permutation(2, n) 결과
+    [[1, 2, 3, 4], [1, 2, 4, 3], [1, 3, 2, 4], [1, 3, 4, 2], [1, 4, 2, 3], [1, 4, 3, 2], [2, 1, 3, 4], [2, 1, 4, 3], [2, 3, 1, 4], [2, 3, 4, 1], [2, 4, 1, 3], [2, 4, 3, 1], [3, 1, 2, 4], [3, 1, 4, 2], [3, 2, 1, 4], [3, 2, 4, 1], [3, 4, 1, 2], [3, 4, 2, 1], [4, 1, 2, 3], [4, 1, 3, 2], [4, 2, 1, 3], [4, 2, 3, 1], [4, 3, 1, 2], [4, 3, 2, 1]]
+    # BT_permutation(4, n) 결과
+    ```
+    
+    
 
   
 
-  
+
+
+
 
 출처: SW Expert Academy - Learn - Course - Programming Intermediate
 
