--- a/python/algorithm/11. 분할 정복 (Divide and Conquer).md
+++ b/python/algorithm/11. 분할 정복 (Divide and Conquer).md
@@ -62,22 +62,89 @@
 
   
 
-
-
-
-
 - 퀵 정렬
-  - 피봇을 구하는 알고리즘
+  - 기준점(pivot)을 만들어서 그 값보다 작은 값, 큰 값들을 나눈다. 이 작업을 더이상 작은 값과 큰 값으로 나눌 수 없을 때까지 진행하여 각각 정렬을 진행하고, 그 결과 값을 합친다.
   - 최악의 경우 시간 복잡도: O(n<sup>2</sup>) - 합병정렬에 비해 좋지못함
-    --> 하지만 평균적으로 시간 복잡도가 O(nlogn)이다.
+    --> 하지만 평균적으로 시간 복잡도가 <strong>O(nlogn)</strong>이다.
 
-  
+  ![퀵 정렬의 시간복잡도](https://i.ibb.co/gPC9Cj8/quicksort.jpg)
 
+  ```python
+  # python 예시 - 분할 정복(2-1): 퀵 정렬(Quick Sort) <1>
   
+  def Quick(inplst):
+    lst = inplst[:]
+      pivot = lst[0]
+      left = []
+      right = []
+      pivots = []
+  
+      for char in lst:
+        if char < pivot: left.append(char)
+          elif char == pivot: pivots.append(char)
+          else: right.append(char)
+      
+      if len(inplst) == 2:
+          return left + pivots + right
+      elif len(inplst) == 3:
+          if len(left) == 2: return Quick(left) + pivots
+          elif len(right) == 2: return pivots + Quick(right)
+      
+      if len(left) == 1: return left + pivots + Quick(right)
+      elif len(right) == 1: return Quick(left) + pivots + right
+  
+      return Quick(left) + pivots + Quick(right)
+  
+  target = [3, 5, 8, 1, 2, 9, 4, 7, 6]
+print(Quick(target))
+  
+  # 출력
+  >>> [1, 2, 3, 4, 5, 6, 7, 8, 9]
+  ```
+  
+  - 이 코드는 함수를 호출할 때마다 리스트를 생성하므로 메모리 공간을 많이 쓴다는 단점이 생긴다.
+  
+  ```python
+  # python 예시 - 분할 정복(2-2): 퀵 정렬(Quick Sort) <2>
+  
+  def Quick(lst, start, end):
+      if start >= end: return
+      pivot = start
+      L = start + 1
+      R = end
+  
+      while L < R:        
+          while L <= R and lst[L] < lst[pivot]: L += 1
+          while L <= R and lst[R] >= lst[pivot]: R -= 1
+          if L < R:
+              lst[L], lst[R] = lst[R], lst[L]
+      
+      if lst[R] <= lst[pivot]:
+          lst[R], lst[pivot] = lst[pivot], lst[R]
+          pivot = R
+  
+      Quick(lst, start, pivot - 1)
+      Quick(lst, pivot + 1, end)
+  
+  target = [3, 5, 8, 1, 2, 9, 4, 7, 6]
+  Quick(target, 0, len(target)-1)
+  print(target)
+  
+  # 출력
+  >>> [1, 2, 3, 4, 5, 6, 7, 8, 9]
+  ```
+  
+  - 새로 리스트를 생성하지 않고 이미 존재하는 리스트 내부에서 값을 바꿔주는 방식이므로 메모리 공간을 낭비하지 않고 정렬할 수 있다.
 
-  
+
+
+
+
+
+
+
+
 
 출처: SW Expert Academy - Learn - Course - Programming Intermediate
 
 [SW Expert Academy - Programming Intermediate course](https://swexpertacademy.com/main/learn/course/subjectList.do?courseId=AVuPDN86AAXw5UW6)
-
