20200217 python swea course inter

--- a/python/algorithm/11. 분할 정복 (Divide and Conquer).md
+++ b/python/algorithm/11. 분할 정복 (Divide and Conquer).md
@@ -113,18 +113,24 @@ print(Quick(target))
       L = start + 1
       R = end
   
+      # 1 ----------------
       while L < R:        
           while L <= R and lst[L] < lst[pivot]: L += 1
           while L <= R and lst[R] >= lst[pivot]: R -= 1
           if L < R:
               lst[L], lst[R] = lst[R], lst[L]
+      # 1 ----------------
       
+      # 2 ----------------
       if lst[R] <= lst[pivot]:
           lst[R], lst[pivot] = lst[pivot], lst[R]
           pivot = R
-  
+      # 2 ----------------
+      
+      # 3 ----------------
       Quick(lst, start, pivot - 1)
       Quick(lst, pivot + 1, end)
+      # 3 ----------------
   
   target = [3, 5, 8, 1, 2, 9, 4, 7, 6]
   Quick(target, 0, len(target)-1)
@@ -135,6 +141,16 @@ print(Quick(target))
   ```
   
   - 새로 리스트를 생성하지 않고 이미 존재하는 리스트 내부에서 값을 바꿔주는 방식이므로 메모리 공간을 낭비하지 않고 정렬할 수 있다.
+  
+    - 1번 블록: Pivot 값보다 작은 것들 // 크거나 같은 것들로 분류
+  
+      ![1번블록](https://i.ibb.co/ZWbgn6v/quickcode1.jpg)
+  
+    - 2번 블록: Pivot 값보다 작은 것들 중 가장 마지막으로 찾은 것과 Pivot을 바꿈
+      ![2번블록](https://i.ibb.co/pL0dSVf/quickcode2.jpg)
+  
+    - 3번 블록: Pivot 값보다 작은 것으로 분류된 묶음 // 크거나 같은 것으로 분류된 묶음에 대해 각각 동일한 작업 실행
+      ![3번블록](https://i.ibb.co/mS3WT6F/quickcode3.jpg)
 
 
 
