--- a/python/실수-오답노트.md
+++ b/python/실수-오답노트.md
@@ -52,3 +52,7 @@
 
   - 본문의 x가 무엇, y가 무엇을 의미하는지 좀 더 명시적으로 적어두기.
   - <font color='red'>y행 x열 등 "**말하면서**" 확실하게 위치 잡도록 하자 헷갈리지 말고.</font>
+
+- 시뮬레이션
+  - 지레짐작하여 '이럴 것이다' 라고 추정하지 말고, 문제에서 요구하는 것은 **무조건 모두** 구현한다.
+    ex) https://www.acmicpc.net/problem/17837 에서 지레짐작해서 파란색인 경우 방향을 바꾼다고 해도 갇혀있을 것이니 방향 바꾸는 걸 안 해도 될 것이라고 한 게 오답의 원인이 되었다. 다른 말 위에 올라타서 다른 곳으로 이동한다면 바뀐 방향 대로 진행해야 하기 때문이다.
