--- a/python/algorithm/ps_posts/20201209_백준_17142_연구소 3.md
+++ b/python/algorithm/ps_posts/20201209_백준_17142_연구소 3.md
@@ -15,7 +15,7 @@
 # N이 최대 50이므로 맵 전체를 탐색한다면 2500번,
 # 2의 개수는 10보다 작거나 같으므로 대략 10C5정도가 가장 큰 경우의 수
 # 10C5 * 2500 * 5 = 315만
-# 백트래킹으로 풀어보자
+# 가지치기 해서 풀어보자
 
 from collections import deque
 from itertools import combinations
