Docs: 알고리즘 스터디 문제 md로 정리 (~20210112)
- 백준 14725 개미굴
- 백준 2887 행성 터널

--- a/python/algorithm/ps_posts/20210106_백준_1774_우주신과의 교감.md
+++ b/python/algorithm/ps_posts/20210106_백준_1774_우주신과의 교감.md
@@ -34,12 +34,14 @@ def union(x, y, parents, ranks):
     if ranks[xroot] == ranks[yroot]:
         ranks[xroot] += 1
 
-def kruskal(edges, parents, ranks):
+def kruskal(edges, parents, ranks, cnt):
     cost = 0
     for val, s, e in edges:
         if find(s, parents) != find(e, parents):
             cost += val
             union(s, e, parents, ranks)
+            cnt += 1
+        if cnt == len(parents)- 1: return cost
     return cost
 
 def solution(N, M):
@@ -58,13 +60,15 @@ def solution(N, M):
         coors.append((x1, y1))
         head += 1
 
+    cnt = 1
     for i in range(M):
         a, b = map(int, input().split())
         if find(a, parents) != find(b, parents):
             union(a, b, parents, ranks)
+            cnt += 1
     
     edges.sort()
-    print('{0:0.2f}'.format(kruskal(edges, parents, ranks)))
+    print('{0:0.2f}'.format(kruskal(edges, parents, ranks, cnt)))
 
 if __name__ == '__main__':
     solution(*map(int, input().split()))
