20210128 Allim Algorithm Study
- 백준 11723 집합
- 백준 11659 구간 합 구하기 4
- 백준 1912 연속합
- 백준 2170 선 긋기
- 백준 1689 겹치는 선분
- 백준 2003 수들의 합 2
- ps_posts 다익스트라 스펠링 수정

--- a/python/algorithm/ps_posts/20210118_백준_1504_특정한 최단 경로.md
+++ b/python/algorithm/ps_posts/20210118_백준_1504_특정한 최단 경로.md
@@ -23,7 +23,7 @@
 import sys
 input = sys.stdin.readline
 
-def djikstra(graph, N, s, targets):
+def dijkstra(graph, N, s, targets):
     visited = [0 for i in range(N+1)]
     dist = [float('inf') for i in range(N+1)]
     dist[s] = 0
@@ -65,9 +65,9 @@ def solution(N, E):
             graph[b] = [(a, c)]
     
     v1, v2 = map(int, input().split())
-    tov1, tov2 = djikstra(graph, N, 1, [v1, v2])
-    v1toN, v1tov2 = djikstra(graph, N, v1, [N, v2])
-    v2toN, v2tov1 = djikstra(graph, N, v2, [N, v1])
+    tov1, tov2 = dijkstra(graph, N, 1, [v1, v2])
+    v1toN, v1tov2 = dijkstra(graph, N, v1, [N, v2])
+    v2toN, v2tov1 = dijkstra(graph, N, v2, [N, v1])
 
     minval = min(tov1 + v1tov2 + v2toN, tov2 + v2tov1 + v1toN)
     if minval == float('inf'): print(-1)
